--- a/Proyecto-Angular/src/app/components/proyectos/proyectos-item/proyectos-item.component.html
+++ b/Proyecto-Angular/src/app/components/proyectos/proyectos-item/proyectos-item.component.html
@@ -1,8 +1,8 @@
 <div id="contenedor-imagen">  
-    <a *ngIf="proyecto.urlSitioWeb" href="{{proyecto.urlSitioWeb}}" target="_blank">
+    <a *ngIf="proyecto.url_sitio_web" href="{{proyecto.url_sitio_web}}" target="_blank">
       <img src="{{proyecto.imagen}}">
     </a>
-    <a *ngIf="!proyecto.urlSitioWeb" href="{{proyecto.urlGitHub}}" target="_blank">
+    <a *ngIf="!proyecto.url_sitio_web" href="{{proyecto.url_github}}" target="_blank">
       <img src="{{proyecto.imagen}}">
     </a>   
 </div>  
@@ -11,7 +11,13 @@
       <h4>{{proyecto.nombre}}</h4>
       <div class="ms-auto">
         <button>
-          <fa-icon [icon]="faX" *ngIf="modoEdicion" class="icono-borrar"></fa-icon>    
+          <fa-icon 
+              [icon]="faX" 
+              *ngIf="modoEdicion" 
+              class="icono-borrar"
+              data-bs-toggle="modal" 
+              [attr.data-bs-target]="'#proyecto-modal-eliminar-' + proyecto.id">
+          </fa-icon>    
         </button>       
         <button>
             <fa-icon 
@@ -29,13 +35,13 @@
     </div>
     <div class="contenedor-tecnologias-iconos">
         <div class="d-flex gap-3">
-          <label *ngFor="let tecnologia of proyecto.tecnologias">{{tecnologia}}</label>
+          <label *ngFor="let tecnologia of tecnologias">{{tecnologia}}</label>
         </div>    
         <div class="contenedor-iconos d-flex gap-1">          
-          <a href="{{proyecto.urlGitHub}}" target="_blank" title="GitHub">         
+          <a href="{{proyecto.url_github}}" target="_blank" title="GitHub">         
               <img class="iconos" id="icono-github" src="../assets/GitHub.png">                    
           </a>
-          <a *ngIf="proyecto.urlSitioWeb" href="{{proyecto.urlSitioWeb}}" target="_blank" title="Link Externo"> 
+          <a *ngIf="proyecto.url_sitio_web" href="{{proyecto.url_sitio_web}}" target="_blank" title="Link Externo"> 
             <fa-icon class="iconos" id="icono-flecha" [icon]="faArrow"></fa-icon> 
           </a>          
         </div>
