--- a/Proyecto-Angular/src/app/components/proyectos/proyectos-modal-editar/proyectos-modal-editar.component.html
+++ b/Proyecto-Angular/src/app/components/proyectos/proyectos-modal-editar/proyectos-modal-editar.component.html
@@ -18,7 +18,7 @@
                             <div class="d-flex align-items-baseline modal-body-div">
                                 <label for="user" class="form-label etiquetaModal">Nombre</label>
                                 <input 
-                                    #Nombre 
+                                
                                     type="text" 
                                     class="form-control inputModal" 
                                     placeholder="Ingrese nombre"
@@ -55,18 +55,18 @@
                             <div class="d-flex align-items-baseline modal-body-div">
                                 <label for="user" class="form-label etiquetaModal">URL Sitio Web</label>
                                 <input 
-                                    #URLWeb
+                
                                     type="text" 
-                                    [ngClass]="{'is-invalid':formularioInvalido && formularioProyecto.get('urlSitioWeb')?.errors?.['pattern']}"
+                                    [ngClass]="{'is-invalid':formularioInvalido && formularioProyecto.get('url_sitio_web')?.errors?.['pattern']}"
                                     class="form-control inputModal" 
                                     placeholder="Ingrese url del sitio web del proyecto (si posee)"
                                     maxlength="200"
-                                    formControlName="urlWeb"
+                                    formControlName="url_sitio_web"
                                     (click)="ocultarMensajeError()">
                             </div>                        
                             <p 
                                 class="text-danger" 
-                                *ngIf="formularioInvalido && formularioProyecto.get('urlSitioWeb')?.errors?.['pattern']">
+                                *ngIf="formularioInvalido && formularioProyecto.get('url_sitio_web')?.errors?.['pattern']">
                                 Debe ingresar una url válida
                             </p>  
                         </div>
@@ -74,24 +74,24 @@
                             <div class="d-flex align-items-baseline modal-body-div">
                                 <label for="user" class="form-label etiquetaModal">URL GitHub</label>
                                 <input 
-                                    #URLGitHub
+        
                                     type="text"
-                                    [ngClass]="{'is-invalid':formularioInvalido && (formularioProyecto.get('urlGitHub')?.errors?.['required'] || 
-                                    formularioInvalido && formularioProyecto.get('urlGitHub')?.errors?.['pattern'])}" 
+                                    [ngClass]="{'is-invalid':formularioInvalido && (formularioProyecto.get('url_github')?.errors?.['required'] || 
+                                    formularioInvalido && formularioProyecto.get('url_github')?.errors?.['pattern'])}" 
                                     class="form-control inputModal" 
                                     placeholder="Ingrese url del sitio del proyecto en GitHub"
                                     maxlength="200"
-                                    formControlName="urlGitHub"
+                                    formControlName="url_github"
                                     (click)="ocultarMensajeError()">
                             </div>
                             <p 
                                 class="text-danger" 
-                                *ngIf="formularioInvalido && formularioProyecto.get('urlGitHub')?.errors?.['required']">
+                                *ngIf="formularioInvalido && formularioProyecto.get('url_github')?.errors?.['required']">
                                 Este campo es obligatorio
                             </p> 
                             <p 
                                 class="text-danger" 
-                                *ngIf="formularioInvalido && formularioProyecto.get('urlGitHub')?.errors?.['pattern']">
+                                *ngIf="formularioInvalido && formularioProyecto.get('url_github')?.errors?.['pattern']">
                                 Debe ingresar una url válida
                             </p> 
                         </div>
@@ -99,7 +99,7 @@
                             <div class="d-flex align-items-baseline modal-body-div">
                                 <label for="user" class="form-label etiquetaModal">Tecnologías</label>
                                 <input 
-                                    #Tecnologias
+                   
                                     type="text"
                                     [ngClass]="{'is-invalid':formularioInvalido && (formularioProyecto.get('tecnologias')?.errors?.['required'] || 
                                     formularioInvalido && formularioProyecto.get('tecnologias')?.errors?.['pattern'])}"  
@@ -117,24 +117,24 @@
                             <p 
                                 class="text-danger" 
                                 *ngIf="formularioInvalido && formularioProyecto.get('tecnologias')?.errors?.['pattern']">
-                                Separar las tecnologias con un espacio y agregar un espacio al final
+                                Las tecnologias deben ir en minúscula y separadas por una coma
                             </p> 
                         </div>                      
                         <div class="mb-3">
-                            <div class="mb-2 modal-body-div" >
-                                <label for="user" class="form-label etiquetaModal">Imagen</label>                                               
-                                <input 
-                                    class="inputEdicion me-2" 
-                                    (change)="capturarImagen($event)" 
-                                    #nuevaImagen
-                                    (click)="ocultarMensajeError()" 
-                                    type="file"
-                                    accept="image/*"
-                                    formControlName="imagen">
-                                <label class="textoModal">{{nombreArchivo}}</label>             
-                            </div>                            
-                        </div> 
-                        <img *ngIf="previsualizacionImagen" class="imagenEdicion mb-1" [src]="previsualizacionImagen">                 
+                            <label for="user" class="form-label me-5 textoModal">Imagen</label>
+                            <img *ngIf="!previsualizacionImagen" class="imagenEdicion" [src]="proyecto.imagen">
+                            <img *ngIf="previsualizacionImagen" class="imagenEdicion mb-1" [src]="previsualizacionImagen">
+                        </div>                                                
+                        <div class="mb-2">
+                            <label for="user" class="form-label textoModal me-4">Nueva Imagen</label>
+                            <input 
+                                class="inputEdicion me-2" 
+                                (change)="capturarImagen($event)" 
+                                type="file" 
+                                accept="image/*"
+                                (click)="ocultarMensajeError()">                            
+                        </div>
+                        <label class="textoModal">{{nombreArchivo}}</label>                 
                         
                         <div class="modal-footer d-flex justify-content-between pt-2 pe-0 pb-0 ps-0">
                           <button 
