--- a/Proyecto-Angular/src/app/components/proyectos/proyectos-modal/proyectos-modal.component.html
+++ b/Proyecto-Angular/src/app/components/proyectos/proyectos-modal/proyectos-modal.component.html
@@ -17,7 +17,7 @@
                         <div class="d-flex modal-body-div align-items-baseline">
                             <label for="user" class="form-label etiquetaModal">Título</label>
                             <input 
-                                #nuevoTitulo 
+                                [value]="miTitulo.titulo"
                                 type="text" 
                                 class="form-control inputModal" 
                                 placeholder="Ingrese nuevo título"
