--- a/Proyecto-Angular/src/app/components/formacion-academica/formacion-academica-modal/formacion-academica-modal.component.html
+++ b/Proyecto-Angular/src/app/components/formacion-academica/formacion-academica-modal/formacion-academica-modal.component.html
@@ -3,7 +3,7 @@
 <form (ngSubmit)="onSubmit()" [formGroup]="formularioFormacion">
     <div 
     class="modal fade modal-lg"      
-    id="educacion-modal-titulo" tabindex="-1" 
+    id="formacion-modal-titulo" tabindex="-1" 
     aria-labelledby="textoModalLabel"
     aria-hidden="true"
     >
@@ -17,7 +17,7 @@
                         <div class="d-flex modal-body-div align-items-baseline">
                             <label for="user" class="form-label etiquetaModal">Título</label>
                             <input 
-                                #nuevoTitulo 
+                                [value]="miTitulo.titulo"
                                 type="text" 
                                 class="form-control inputModal" 
                                 placeholder="Ingrese nuevo título"
