--- a/Proyecto-Angular/src/app/components/formacion-academica/formacion-academica.component.html
+++ b/Proyecto-Angular/src/app/components/formacion-academica/formacion-academica.component.html
@@ -1,27 +1,27 @@
 <section class="d-flex justify-content-center align-items-center" id="formacion academica">
     <div class="card" id="container"> 
         <div class="my-3 d-flex justify-content-between align-items-baseline flex-wrap" data-aos="fade-right" data-aos-duration="600" data-aos-easing="ease-in-out">
-            <h3><strong>{{titulo}}</strong></h3>
+            <h3><strong>{{titulo.titulo}}</strong></h3>
             <div>
                 <fa-icon
 
                     [icon]="faPlus" 
                     *ngIf="modoEdicion" 
                     data-bs-toggle="modal" 
-                    data-bs-target="#educacion-modal-crear">
+                    data-bs-target="#formacion-modal-crear">
                 </fa-icon> 
                 <fa-icon
                     id="a"
                     *ngIf="modoEdicion" 
                     [icon]="faSquarePen"
                     data-bs-toggle="modal" 
-                    data-bs-target="#educacion-modal-titulo">
+                    data-bs-target="#formacion-modal-titulo">
                 </fa-icon>
             </div>  
         </div>
         <app-formacion-academica-item            
-              *ngFor="let educacion of formacionAcademica"
-              [educacion]="educacion"
+              *ngFor="let formacion of formaciones"
+              [formacion]="formacion"
               class="my-3 w-100"
               data-aos="fade-right" data-aos-duration="600" data-aos-easing="ease-in-out"                                                  
           >
@@ -30,11 +30,21 @@
     </div>         
 </section>
 <app-formacion-academica-modal
-    (modificarTitulo)="cambiarTitulo($event)">
+    (actualizarTitulo)="modificarTitulo($event)">
 </app-formacion-academica-modal>
-<app-formacion-academica-modal-crear></app-formacion-academica-modal-crear>
+<app-formacion-academica-modal-crear
+    (enAgregarFormacion)="agregarFormacion($event)"
+>
+</app-formacion-academica-modal-crear>
 <app-formacion-academica-modal-editar
-    *ngFor="let educacion of formacionAcademica"
-    [educacion]="educacion">
+    *ngFor="let formacion of formaciones"
+    [formacion]="formacion"
+    (enModificarFormacion)="modificarFormacion($event)">
 </app-formacion-academica-modal-editar>
+<app-formacion-academica-modal-eliminar
+    *ngFor="let formacion of formaciones"
+    [formacion]="formacion"
+    (enEliminarFormacion)="eliminarFormacion($event)">
+</app-formacion-academica-modal-eliminar>
+
 
