--- a/Proyecto-Angular/src/app/components/formacion-academica/formacion-academica-modal-crear/formacion-academica-modal-crear.component.html
+++ b/Proyecto-Angular/src/app/components/formacion-academica/formacion-academica-modal-crear/formacion-academica-modal-crear.component.html
@@ -2,14 +2,14 @@
 
 <div 
 class="modal fade modal-lg"      
-id="educacion-modal-crear" tabindex="-1" 
+id="formacion-modal-crear" tabindex="-1" 
 aria-labelledby="textoModalLabel"
 aria-hidden="true"
 >
     <div class="modal-dialog modal-dialog-centered" role="document" (click)="resetearForm()">
         <div class="modal-content">
             <div class="modal-header justify-content-center">
-                <h3 class="modal-title textoModal" id="textoModalLabel">Añadir Educación</h3>                        
+                <h3 class="modal-title textoModal" id="textoModalLabel">Añadir Formación</h3>                        
             </div>
             <div class="modal-body">                          
                 
@@ -23,7 +23,7 @@ aria-hidden="true"
                                 maxlength="60" 
                                 class="form-control inputModal"
                                 formControlName="nombre"
-                                [ngClass]="{'is-invalid':formularioInvalido && formularioFormacion.get('nombre')?.errors?.['required']}" 
+                                [ngClass]="{'is-invalid':formularioInvalido && formularioFormacion.get('nombre')?.errors?.['required']}"
                                 placeholder="Ingrese el nombre del curso/carrera"
                                 (click)="ocultarMensajeError()">
                         </div>
@@ -56,24 +56,23 @@ aria-hidden="true"
                         <div class="d-flex align-items-baseline modal-body-div">
                             <label for="user" class="form-label etiquetaModal">URL Institución</label>
                             <input 
-                                #urlInstitucion
-                                formControlName="urlInstitucion"
+                                formControlName="url_institucion"
                                 type="text"
                                 maxlength="200"
-                                [ngClass]="{'is-invalid':formularioInvalido && (formularioFormacion.get('urlInstitucion')?.errors?.['required'] || 
-                                formularioInvalido && formularioFormacion.get('urlInstitucion')?.errors?.['pattern'])}" 
+                                [ngClass]="{'is-invalid':formularioInvalido && (formularioFormacion.get('url_institucion')?.errors?.['required'] || 
+                                formularioInvalido && formularioFormacion.get('url_institucion')?.errors?.['pattern'])}" 
                                 class="form-control inputModal" 
                                 placeholder="Ingrese la url del sitio web de la institución"
                                 (click)="ocultarMensajeError()">
                         </div>
                         <p 
                             class="text-danger" 
-                            *ngIf="formularioInvalido && formularioFormacion.get('urlInstitucion')?.errors?.['required']">
+                            *ngIf="formularioInvalido && formularioFormacion.get('url_institucion')?.errors?.['required']">
                             Este campo es obligatorio
                         </p>  
                         <p 
                             class="text-danger" 
-                            *ngIf="formularioInvalido && formularioFormacion.get('urlInstitucion')?.errors?.['pattern']">
+                            *ngIf="formularioInvalido && formularioFormacion.get('url_institucion')?.errors?.['pattern']">
                             Debe ingresar una url válida
                         </p>
                     </div>
@@ -81,18 +80,17 @@ aria-hidden="true"
                         <div class="d-flex align-items-baseline modal-body-div">
                             <label for="user" class="form-label etiquetaModal">URL Certificado</label>
                             <input 
-                                #urlCertificado
                                 type="text" 
                                 class="form-control inputModal"
                                 maxlength="200"
-                                [ngClass]="{'is-invalid':formularioInvalido && formularioFormacion.get('urlCertificado')?.errors?.['required']}" 
+                                [ngClass]="{'is-invalid':formularioInvalido && formularioFormacion.get('url_certificado')?.errors?.['required']}" 
                                 placeholder="Ingrese la url del certificado"
                                 (click)="ocultarMensajeError()"
-                                formControlName="urlCertificado">
+                                formControlName="url_certificado">
                         </div>
                         <p 
                             class="text-danger" 
-                            *ngIf="formularioInvalido && formularioFormacion.get('urlCertificado')?.errors?.['pattern']">
+                            *ngIf="formularioInvalido && formularioFormacion.get('url_certificado')?.errors?.['pattern']">
                             Debe ingresar una url válida
                         </p>
                     </div>
@@ -100,24 +98,23 @@ aria-hidden="true"
                         <div class="d-flex align-items-baseline modal-body-div">
                             <label for="user" class="form-label etiquetaModal">Fecha Inicio</label>
                             <input 
-                                #fechaInicio
                                 type="text"
                                 maxlength="15"
-                                [ngClass]="{'is-invalid':formularioInvalido && (formularioFormacion.get('fechaInicio')?.errors?.['required'] || 
-                                formularioInvalido && formularioFormacion.get('fechaInicio')?.errors?.['pattern'])}" 
+                                [ngClass]="{'is-invalid':formularioInvalido && (formularioFormacion.get('fecha_inicio')?.errors?.['required'] || 
+                                formularioInvalido && formularioFormacion.get('fecha_inicio')?.errors?.['pattern'])}" 
                                 class="form-control inputModal" 
                                 placeholder="Ingrese fecha de inicio (mes y año)"
                                 (click)="ocultarMensajeError()"
-                                formControlName="fechaInicio">
+                                formControlName="fecha_inicio">
                         </div>
                         <p 
                             class="text-danger" 
-                            *ngIf="formularioInvalido && formularioFormacion.get('fechaInicio')?.errors?.['required']">
+                            *ngIf="formularioInvalido && formularioFormacion.get('fecha_inicio')?.errors?.['required']">
                             Este campo es obligatorio
                         </p>                         
                         <p 
                             class="text-danger" 
-                            *ngIf="formularioInvalido && formularioFormacion.get('fechaInicio')?.errors?.['pattern']">
+                            *ngIf="formularioInvalido && formularioFormacion.get('fecha_inicio')?.errors?.['pattern']">
                             Debe ingresar una fecha en el formato correcto, ejemplo: Diciembre 2022.
                         </p>
                     </div>
@@ -125,24 +122,23 @@ aria-hidden="true"
                         <div class="d-flex align-items-baseline modal-body-div">
                             <label for="user" class="form-label etiquetaModal">Fecha Fin</label>
                             <input 
-                                #fechaFin
                                 type="text"
                                 maxlength="15"
-                                [ngClass]="{'is-invalid':formularioInvalido && (formularioFormacion.get('fechaFin')?.errors?.['required'] || 
-                                formularioInvalido && formularioFormacion.get('fechaFin')?.errors?.['pattern'])}" 
+                                [ngClass]="{'is-invalid':formularioInvalido && (formularioFormacion.get('fecha_fin')?.errors?.['required'] || 
+                                formularioInvalido && formularioFormacion.get('fecha_fin')?.errors?.['pattern'])}" 
                                 class="form-control inputModal" 
                                 placeholder="Ingrese fecha de finalización (mes y año)"
                                 (click)="ocultarMensajeError()"
-                                formControlName="fechaFin">
+                                formControlName="fecha_fin">
                         </div>
                         <p 
                             class="text-danger" 
-                            *ngIf="formularioInvalido && formularioFormacion.get('fechaFin')?.errors?.['required']">
+                            *ngIf="formularioInvalido && formularioFormacion.get('fecha_fin')?.errors?.['required']">
                             Este campo es obligatorio
                         </p>                         
                         <p 
                             class="text-danger" 
-                            *ngIf="formularioInvalido && formularioFormacion.get('fechaFin')?.errors?.['pattern']">
+                            *ngIf="formularioInvalido && formularioFormacion.get('fecha_fin')?.errors?.['pattern']">
                             Debe ingresar una fecha en el formato correcto, ejemplo: Diciembre 2022.
                         </p>
                     </div>
@@ -150,7 +146,6 @@ aria-hidden="true"
                         <div class="d-flex align-items-baseline modal-body-div">
                             <label for="user" class="form-label etiquetaModal">Descripción</label>              
                                 <textarea
-                                    #descripcion 
                                     maxlength="300"
                                     [ngClass]="{'is-invalid':formularioInvalido && formularioFormacion.get('descripcion')?.errors?.['required']}"           
                                     class="form-control inputModal2" 
@@ -173,8 +168,7 @@ aria-hidden="true"
                                 #nuevaImagen
                                 (click)="ocultarMensajeError()" 
                                 type="file"
-                                accept="image/*"
-                                formControlName="imagen">
+                                accept="image/*">
                             <label class="textoModal">{{nombreArchivo}}</label>             
                         </div>
                         <p 
